k8s/apps/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: helloworld
spec:
  type: ClusterIP
  selector:
    app: helloworld
  ports:
    - name: http
      port: 80
      targetPort: 8080
